[package]
name = "p2p-conn"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = { version = "0.55", features = [
    "tokio",
    "gossipsub",
    "mdns",
    "noise",
    "yamux",
    "tcp",
    "quic",
    "kad",
    "identify",
    "request-response",
    "macros", "upnp", "cbor"# ← THIS IS THE KEY - Add "macros" feature
] }
futures = "0.3"
tokio = { version = "1", features = ["full", "signal"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = "1.8"
asynchronous-codec = { version = "0.6", features = ["json"] }
futures-util = "0.3"
hex = "0.4"
